--- a/style.css
+++ b/style.css
@@ -8,5 +8,6 @@
 .square {
     height: 50px;
     width: 50px;
-    background-color: white;
+    background-color: gray;
+    border-color: blue
   }
