--- a/style.css
+++ b/style.css
@@ -8,6 +8,6 @@
 .square {
     height: 50px;
     width: 50px;
-    background-color: gray;
+    background-color: white;
     border-style: solid;
   }
