--- a/style.css
+++ b/style.css
@@ -9,19 +9,13 @@
     height: 50px;
     width: 50px;
     background-color: white;
-    border-style: solid black;
+    border-style: solid;
   }
-  .block {
-    border-radius: 15px; 
-     width: 100px;
-     height: 100px;
-   border: 1px solid black;
-  padding: 1px;
-  }
+
  .grid {
    display: grid;
-   grid-auto-rows: 100px;
-   grid-auto-columns: 100px;
+   grid-auto-rows: 50px;
+   grid-auto-columns: 50px;
  }
  .red { grid-area: 1 / 1 / 2 / 2; }
  .orange { grid-area: 1 / 2 / 2 / 3; }
