--- a/style.css
+++ b/style.css
@@ -26,3 +26,51 @@
  .black { grid-area: 3/ 1 / 3 / 2; }
  .gold { grid-area: 3 / 2 / 3 / 3; }
  .blue { grid-area: 3 / 3 / 3 / 4; }
+ ._h_tml square { grid-area: 3 / 3 / 3 / 4; }
+ .h_t_ml square { grid-area: 3 / 3 / 3 / 4; }
+ .ht_m_l square { grid-area: 3 / 3 / 3 / 4; }
+ .htm_l_ square { grid-area: 3 / 3 / 3 / 4; }
+ .m_a_in.jss square { grid-area: 3 / 3 / 3 / 4; }
+ .ma_i_n.jss square { grid-area: 3 / 3 / 3 / 4; }
+ .mai_n_.jss square { grid-area: 3 / 3 / 3 / 4; }
+ .main_._jss square { grid-area: 3 / 3 / 3 / 4; }
+ .main._j_ss square { grid-area: 3 / 3 / 3 / 4; }
+ .main.j_s_s square { grid-area: 3 / 3 / 3 / 4; }
+ .main.js_s_ square { grid-area: 3 / 3 / 3 / 4; }
+ .n_a_v square { grid-area: 3 / 3 / 3 / 4; }
+ .na_v_ square { grid-area: 3 / 3 / 3 / 4; }
+ ._c_ss square { grid-area: 3 / 3 / 3 / 4; }
+ .cs_s_ square { grid-area: 3 / 3 / 3 / 4; }
+ .s_t_yle square { grid-area: 3 / 3 / 3 / 4; }
+ .st_y_le square { grid-area: 3 / 3 / 3 / 4; }
+ .sty_l_e square { grid-area: 3 / 3 / 3 / 4; }
+ .styl_e_ square { grid-area: 3 / 3 / 3 / 4; }
+ .j_a_vascript square { grid-area: 3 / 3 / 3 / 4; }
+ .ja_v_ascript square { grid-area: 3 / 3 / 3 / 4; }
+ .jav_a_script square { grid-area: 3 / 3 / 3 / 4; }
+ .java_s_cript square { grid-area: 3 / 3 / 3 / 4; }
+ .javas_c_ript square { grid-area: 3 / 3 / 3 / 4; }
+ .javasc_r_ipt square { grid-area: 3 / 3 / 3 / 4; }
+ .javascr_i_pt square { grid-area: 3 / 3 / 3 / 4; }
+ .javascri_p_t square { grid-area: 3 / 3 / 3 / 4; }
+ .javascrip_t_ square { grid-area: 3 / 3 / 3 / 4; }
+ .i_n_dex square { grid-area: 3 / 3 / 3 / 4; }
+ .in_d_ex square { grid-area: 3 / 3 / 3 / 4; }
+ .ind_e_x square { grid-area: 3 / 3 / 3 / 4; }
+ .inde_x_ square { grid-area: 3 / 3 / 3 / 4; }
+ .p_r_ogramming square { grid-area: 3 / 3 / 3 / 4; }
+ .pr_o_gramming square { grid-area: 3 / 3 / 3 / 4; }
+ .pro_g_ramming square { grid-area: 3 / 3 / 3 / 4; }
+ .prog_r_amming square { grid-area: 3 / 3 / 3 / 4; }
+ .progr_a_mming square { grid-area: 3 / 3 / 3 / 4; }
+ .progra_m_ming square { grid-area: 3 / 3 / 3 / 4; }
+ .program_m_ing square { grid-area: 3 / 3 / 3 / 4; }
+ .programm_i_ng square { grid-area: 3 / 3 / 3 / 4; }
+ .programmi_n_g square { grid-area: 3 / 3 / 3 / 4; }
+ .programmin_g_ square { grid-area: 3 / 3 / 3 / 4; }
+ .c_o_ding square { grid-area: 3 / 3 / 3 / 4; }
+ .co_d_ing square { grid-area: 3 / 3 / 3 / 4; }
+ .cod_i_ng square { grid-area: 3 / 3 / 3 / 4; }
+ .codi_n_g square { grid-area: 3 / 3 / 3 / 4; }
+ .codin_g_ square { grid-area: 3 / 3 / 3 / 4; }
+
