--- a/style.css
+++ b/style.css
@@ -26,13 +26,13 @@
  .h_t_ml { grid-area: 2 / 1 / 3 / 2; }
  .ht_m_l { grid-area: 3 / 1 / 4 / 2; }
  .htm_l_ { grid-area: 4 / 1 / 5 / 2; }
- .m_a_in.jss { grid-area: 3 / 2 / 4 / 3; }
- .ma_i_n.jss { grid-area: 3 / 3 / 4 / 4; }
- .mai_n_.jss { grid-area: 3 / 4 / 4 / 5; }
- .main_._jss { grid-area: 3 / 5 / 4 / 6; }
- .main._j_ss { grid-area: 3 / 6 / 4 / 7; }
- .main.j_s_s { grid-area: 3 / 7 / 4 / 8; }
- .main.js_s_ { grid-area: 3 / 8 / 3 / 9; }
+ .m_a_in-jss { grid-area: 3 / 2 / 4 / 3; }
+ .ma_i_n-jss { grid-area: 3 / 3 / 4 / 4; }
+ .mai_n_-jss { grid-area: 3 / 4 / 4 / 5; }
+ .main_-_jss { grid-area: 3 / 5 / 4 / 6; }
+ .main-_j_ss { grid-area: 3 / 6 / 4 / 7; }
+ .main-j_s_s { grid-area: 3 / 7 / 4 / 8; }
+ .main-js_s_ { grid-area: 3 / 8 / 3 / 9; }
  .n_a_v { grid-area: 4 / 4 / 5 / 5; }
  .na_v_ { grid-area: 5 / 4 / 6 / 5; }
  ._c_ss { grid-area: 2 / 8 / 3 / 9; }
@@ -54,18 +54,18 @@
  .in_d_ex { grid-area: 10 / 8 / 11 / 9; }
  .ind_e_x { grid-area: 10 / 9 / 11 / 10; }
  .inde_x_ { grid-area: 10 / 10 / 11 / 11; }
- .p_r_ogramming { grid-area: 11 / 6 / 12 / 7; }
- .pr_o_gramming { grid-area: 11 / 7 / 12 / 8; }
- .pro_g_ramming { grid-area: 11 / 8 / 12 / 9; }
- .prog_r_amming { grid-area: 11 / 9  / 12 / 10; }
- .progr_a_mming { grid-area: 11 / 10 / 12 / 11; }
- .progra_m_ming { grid-area: 11 / 11 / 12 / 12; }
- .program_m_ing { grid-area: 11 / 12 / 12 / 13; }
- .programm_i_ng { grid-area: 11 / 13 / 12 / 14; }
- .programmi_n_g { grid-area: 11 / 14 / 12 / 15; }
- .programmin_g_ { grid-area: 11 / 15 / 12 / 16; }
- .c_o_ding { grid-area: 2 / 8 / 3 / 9; }
- .co_d_ing { grid-area: 2 / 9 / 3 / 10; }
- .cod_i_ng { grid-area: 2 / 10 / 3 / 11; }
- .codi_n_g { grid-area: 2 / 11 / 3 / 12; }
- .codin_g_ { grid-area: 2 / 12 / 3 / 13; }
+ .p_r_ogramming { grid-area: 11 / 7 / 12 / 8; }
+ .pr_o_gramming { grid-area: 11 / 8 / 12 / 9; }
+ .pro_g_ramming { grid-area: 11 / 9 / 12 / 10; }
+ .prog_r_amming { grid-area: 11 / 10  / 12 / 11; }
+ .progr_a_mming { grid-area: 11 / 11 / 12 / 12; }
+ .progra_m_ming { grid-area: 11 / 12 / 12 / 13; }
+ .program_m_ing { grid-area: 11 / 13 / 12 / 14; }
+ .programm_i_ng { grid-area: 11 / 14 / 12 / 15; }
+ .programmi_n_g { grid-area: 11 / 15 / 12 / 16; }
+ .programmin_g_ { grid-area: 11 / 16 / 12 / 17; }
+ .c_o_ding { grid-area: 2 / 9 / 3 / 10; }
+ .co_d_ing { grid-area: 2 / 10 / 3 / 11; }
+ .cod_i_ng { grid-area: 2 / 11 / 3 / 12; }
+ .codi_n_g { grid-area: 2 / 12 / 3 / 13; }
+ .codin_g_ { grid-area: 2 / 13 / 3 / 14; }
