--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     height: 50px;
     width: 50px;
     background-color: white;
-    border-style: solid;
+    border: 5px solid black;
   }
 
  .grid {
