--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     color :red;
 }
 #trivia{
-    color :grey
+    color :black
 }
 .center{
     text-align: center
@@ -21,6 +21,13 @@
    grid-auto-columns: 50px;
  }
 
+ .x {
+     
+    text-align: center;
+ }
+.v {
+    text-align: center;
+}
 
  ._h_tml { grid-area: 1 / 1 / 2 / 2; }
  .h_t_ml { grid-area: 2 / 1 / 3 / 2; }
