--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@
     padding-left: 300px;
   }
 
+  ._h_tmls { grid-area: 1 / 1 / 2 / 2; }
  ._h_tml { grid-area: 1 / 1 / 2 / 2; }
  .h_t_ml { grid-area: 2 / 1 / 3 / 2; }
  .ht_m_l { grid-area: 3 / 1 / 4 / 2; }
