--- a/style.css
+++ b/style.css
@@ -50,7 +50,10 @@
     padding-left: 300px;
     grid-gap: 1px;
   }
-
+  #text-display {
+      color: lightslategray;
+  }
+ #text-display {grid-area: 2/22/3/40}
   ._h_tmls { grid-area: 1 / 1 / 2 / 2; }
  ._h_tml { grid-area: 1 / 1 / 2 / 2; }
  .h_t_ml { grid-area: 2 / 1 / 3 / 2; }
