--- a/style.css
+++ b/style.css
@@ -55,8 +55,8 @@
       color: lightslategray;
   }
  #text-display {grid-area: 2/22/3/40}
-  ._h_tmls { grid-area: 1 / 1 / 2 / 2; }
- ._h_tml { grid-area: 1 / 1 / 2 / 2; }
+
+  ._h_tml { grid-area: 1 / 1 / 2 / 2; }
  .h_t_ml { grid-area: 2 / 1 / 3 / 2; }
  .ht_m_l { grid-area: 3 / 1 / 4 / 2; }
  .htm_l_ { grid-area: 4 / 1 / 5 / 2; }
@@ -106,5 +106,12 @@
 .text {
     color:blue;
 }
- 
-
+/*Solution boxes*/ 
+._h_tmls { grid-area: 1 / 1 / 2 / 2; }
+.ht_m_ls { grid-area: 3 / 1 / 4 / 2; }
+.mai_n_-jsss { grid-area: 3 / 4 / 4 / 5; }
+.main-_j_sss { grid-area: 3 / 6 / 4 / 7; }
+.cs_s_s { grid-area: 4 / 8 / 5 / 9; }
+._c_sss { grid-area: 2 / 8 / 3 / 9; }
+.javascr_i_pts { grid-area: 10 / 6 / 11 / 7; }
+.javascri_p_ts { grid-area: 11 / 6 / 12 / 7; }
