--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
     height: 50px;
     width: 50px;
     background-color: white;
-    border: solid black;
+    border: 4px solid black;
     text-align: center;
     font-size: 150%;
 
