--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@ color: white;
     background-color:orange;
     color: white;
 }
+.memory {
+    color :white;
+}
 .square {
     height: 50px;
     width: 50px;
