--- a/style.css
+++ b/style.css
@@ -18,6 +18,9 @@ color: white;
 #memory {
     color :white;
 }
+.answerU {
+    grid-area : 3/21/4/25;
+}
 .square {
     height: 50px;
     width: 50px;
