--- a/style.css
+++ b/style.css
@@ -18,6 +18,13 @@ color: white;
 #memory {
     color :white;
 }
+.boxman {
+    height: 100px;
+    width: 100px;
+    background-color: blue
+    text-align: center;
+
+}
 .square {
     height: 50px;
     width: 50px;
@@ -34,7 +41,6 @@ color: white;
     border: 4px solid black;
     text-align: center;
     font-size: 150%;
-
  }
  .squareL {
     height: 50px;
