--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ color: white;
 .boxman {
     height: 100px;
     width: 100px;
-    background-color: blue
+    background-color: blue;
     text-align: center;
 }
 
