--- a/style.css
+++ b/style.css
@@ -24,6 +24,12 @@ color: white;
     background-color: blue
     text-align: center;
 }
+#name {
+    color : white;
+}
+#Epic {
+    color : white;
+}
 #tittle {
     color: White;
 }
