--- a/style.css
+++ b/style.css
@@ -134,7 +134,13 @@ color: white;
   #text-display {
       color: lightslategray;
   }
- #text-display {grid-area: 2/22/3/40}
+ #text-display {
+     grid-area: 2/22/3/40;
+}
+
+input:focus{
+    border: transparent;
+}
 
   ._h_tml { grid-area: 1 / 1 / 2 / 2; }
  .h_t_ml { grid-area: 2 / 1 / 3 / 2; }
