--- a/style.css
+++ b/style.css
@@ -148,9 +148,13 @@ color: white;
       color: lightslategray;
   }
  #text-display {
-     grid-area: 2/22/3/40;
+     grid-area: 2/22/3/30;
 }
-
+.noline {
+    border:none;
+    width: 44px;
+    height: 44px;
+}
 
 
   ._h_tml { grid-area: 1 / 1 / 2 / 2; }
