--- a/style.css
+++ b/style.css
@@ -135,8 +135,8 @@ color: white;
      
     text-align: center;
  }
- #tag {
-     color :white;
+ #Tag {
+     color: white;
  }
 .v {
     text-align: center;
