--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ color: white;
 #answerU {
     grid-area : 3/21/4/25;
     Height: 40px;
+    text-align: center;
 }
 .square {
     height: 50px;
@@ -158,6 +159,7 @@ color: white;
     border:none;
     width: 44px;
     height: 44px;
+    text-align: center;
 }
 
 
