--- a/style.css
+++ b/style.css
@@ -9,11 +9,21 @@
 }
 .button1 {border-radius: 50%;
 background-color: darkblue;
+width: 100px;
+    height: 100px;
 color: white;
 }
-.button2 {border-radius: 50%;
-    background-color:orange;
+.boxbutton {
+    background-color: darkblue;
+    width: 100px;
+    height: 100px;
     color: white;
+}
+.button2 {
+    background-color:orange;
+    color: black;
+    width: 100px;
+    height: 100px;
 }
 #memory {
     color :white;
@@ -145,6 +155,14 @@ color: white;
 .v {
     text-align: center;
 }
+
+/* .button {
+    width: 100px;
+    height: 100px;
+    background-color: #000;
+    border: solid 1px #000;
+    border-radius: 50%
+} */
  .gridTest {
     display: grid;
     grid-auto-rows: 50px;
