--- a/style.css
+++ b/style.css
@@ -19,6 +19,12 @@ color: white;
     height: 100px;
     color: white;
 }
+.box1button {
+    background-color: darkblue;
+    width: 100px;
+    height: 100px;
+    color: white;
+}
 .button2 {
     background-color:orange;
     color: black;
