--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ color: white;
     font-size: 150%;
     border-top: 3px solid black;
     border-right: 3px solid black;
+    overflow:hidden;
  }
 
  .squares {
@@ -89,6 +90,7 @@ color: white;
     border: 4px solid black;
     text-align: center;
     font-size: 150%;
+    max-width: 300px;
  }
  .squareL {
     height: 50px;
@@ -98,6 +100,7 @@ color: white;
     font-size: 150%;
     border-top: 2px solid black;
     border-right: 3px solid black;
+    overflow:hidden;
  }
  .space {
      height: 6px;
