--- a/style.css
+++ b/style.css
@@ -67,11 +67,6 @@ color: white;
     Height: 40px;
     text-align: center;
 }
-#bss {
-    grid-area : 3/31/4/32;
-    background-color: bisque;
-
-}
 .square {
     height: 50px;
     width: 50px;
@@ -80,7 +75,6 @@ color: white;
     font-size: 150%;
     border-top: 3px solid black;
     border-right: 3px solid black;
-    overflow:hidden;
  }
 
  .squares {
@@ -90,7 +84,6 @@ color: white;
     border: 4px solid black;
     text-align: center;
     font-size: 150%;
-    max-width: 300px;
  }
  .squareL {
     height: 50px;
@@ -100,7 +93,6 @@ color: white;
     font-size: 150%;
     border-top: 2px solid black;
     border-right: 3px solid black;
-    overflow:hidden;
  }
  .space {
      height: 6px;
@@ -155,7 +147,7 @@ color: white;
     padding-left:3px;
     grid-area: 11 / 6 / 12 / 7;
 }
- .grid-container{
+ .grid {
    display: grid;
    grid-auto-rows: 50px;
    grid-auto-columns: 50px;
@@ -204,7 +196,6 @@ color: white;
     width: 44px;
     height: 44px;
     text-align: center;
-    background: transparent;
     
 }
 
@@ -325,9 +316,7 @@ color: white;
      border-left: 3px solid black; 
      border-bottom: 3px solid black;
 }
-.pq {
-background-color: solid green;
-}
+
 
 
 
