--- a/style.css
+++ b/style.css
@@ -5,17 +5,30 @@
     position: fixed;
     bottom: 0;
 }
+
+.bottom1 {
+    position: fixed;
+    text-align: center;
+    bottom: 0;
+}
 #trivia{
     color :black
 }
 .center{
-    text-align: center
+    text-align: center;
 }
 .button1 {border-radius: 50%;
 background-color: darkblue;
 width: 100px;
     height: 100px;
 color: white;
+}
+
+.backbutton {
+    background-color: rgb(174, 0, 255);
+    width: 200px;
+    height: 100px;
+    color: white;
 }
 
 .button3 {
@@ -29,6 +42,27 @@ color: white;
     background-color: darkblue;
     width: 100px;
     height: 100px;
+    color: white;
+}
+
+.bocbutton {
+    background-color: orange;
+    width: 200px;
+    height: 400px;
+    color: white;
+}
+
+.bozbutton {
+    background-color: red;
+    width: 200px;
+    height: 400px;
+    color: white;
+}
+
+.boabutton {
+    background-color: green;
+    width: 200px;
+    height: 400px;
     color: white;
 }
 
@@ -153,9 +187,7 @@ color: white;
    grid-auto-columns: 50px;
  }
 
- h1 {
-     color: blue;
- }
+ 
 #Voohoo {
     font-size: 250%;
 }
