--- a/style.css
+++ b/style.css
@@ -67,6 +67,14 @@ color: white;
     Height: 40px;
     text-align: center;
 }
+.dropone {
+    grid-area : 4/21/5/23;
+
+}
+.droptwo {
+    grid-area : 4/23/5/25;
+    padding-left : 5px;
+}
 #bss {
     grid-area : 3/31/4/32;
     background-color: bisque;
@@ -80,7 +88,8 @@ color: white;
     font-size: 150%;
     border-top: 3px solid black;
     border-right: 3px solid black;
-    overflow:hidden;
+    overflow: hidden;
+    max-width: 50px;
  }
 
  .squares {
@@ -90,7 +99,6 @@ color: white;
     border: 4px solid black;
     text-align: center;
     font-size: 150%;
-    max-width: 300px;
  }
  .squareL {
     height: 50px;
