--- a/style.css
+++ b/style.css
@@ -103,6 +103,10 @@ color: white;
     Height: 40px;
     text-align: center;
 }
+#hi {
+    grid-area : 3/21/4/25;
+    text-align: center;
+}
 .dropone {
     grid-area : 4/21/5/23;
 
@@ -114,6 +118,8 @@ color: white;
 #bss {
     grid-area : 3/31/4/32;
     background-color: bisque;
+    width: 99px;
+    height: 30px;
 
 }
 .square {
