--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ color: white;
     text-align: center;
 }
 #hi {
-    grid-area : 3/21/4/25;
+    grid-area : 3/21/3/25;
     text-align: center;
 }
 .dropone {
@@ -121,6 +121,10 @@ color: white;
     width: 99px;
     height: 30px;
 
+}
+#dog {
+    grid-area : 4/30/5/31;
+    color: white;
 }
 .square {
     height: 50px;
