--- a/style.css
+++ b/style.css
@@ -255,7 +255,8 @@ color: white;
       color: lightslategray;
   }
  #text-display {
-     grid-area: 2/22/3/30;
+     grid-area: 2/21/3/25;
+     text-align: center;
 }
 .noline {
     border:none;
