--- a/style.css
+++ b/style.css
@@ -111,8 +111,9 @@ color: white;
     text-align: center;
 }
 #hi {
-    grid-area : 3/21/3/25;
+    grid-area : 2/21/3/25;
     text-align: center;
+    padding-top: 25px;
 }
 .dropone {
     grid-area : 4/21/5/23;
@@ -124,9 +125,11 @@ color: white;
 }
 #droponetwo{
 Width: 50px;
+text-align:center;
 }
 #droptwotwo{
 width: 50px;
+text-align:center;
 }
 #bss {
     grid-area : 3/31/4/32;
